<?xml version="1.0"?>
<package>
  <name>libcmaes</name>
  <version>0.0.0</version>
  <description>A fixed version of libcmaes with catkin support</description>

  <maintainer email="qrouxel@labri.fr">Quentin Rouxel</maintainer>
  <author email="emmanuel.benazera@lri.fr">Emmanuel Benazera</author>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>Eigen</build_depend>

  <run_depend>Eigen</run_depend>

  <export>
  </export>
</package>
